# mindns-k8s

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yaml
src/: main.rs  utils.rs
src/block/: mod.rs
src/config/: files.rs  mod.rs
src/dns/: mod.rs
src/networking/: handler.rs  peer.rs  udp_serv.rs
src/protocol/: byte_packet_buffer.rs  dns_header.rs  dns_packet.rs  dns_record.rs  query_type.rs  result_code.rs
src/rewrites/: mod.rs
