[package]
name = "mindns-k8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-lock = "3.4.0"
async-trait = "0.1.81"
chrono = "0.4.38"
dashmap = "6.0.1"
net2 = "0.2.39"
num_cpus = "1.16.0"
regex = "1.10.6"
reqwest = "0.12.5"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_yaml = "0.9.34+deprecated"
tokio = { version = "1.39.2", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

kube = { version = "0.93.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
futures = "0.3.30"
